--- a/springProjects/languages/src/main/resources/application.properties
+++ b/springProjects/languages/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/book_schema
+spring.datasource.url=jdbc:mysql://localhost:3306/language_schema
 spring.datasource.username=root
 spring.datasource.password=2BzM7gH0
 spring.jpa.hibernate.ddl-auto=update
-
 
 spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.hiddenmethod.filter.enabled=true
